syntax = "proto3";

package api.v1.operator.cluster;

import "model/metrics.proto";

service Service {
  rpc GetNodes(GetNodesRequest) returns (GetNodesResponse) {}
  rpc GetNodePods(GetNodePodsRequest) returns (GetNodePodsResponse) {}
}

message GetNodesRequest {}

message GetNodesResponse {
  repeated Node nodes = 1;
}

message Node {
  string node_name = 1;
  model.Resources allocateable = 2;
  model.Resources usage = 3;
}

message GetNodePodsRequest {
  string node_name = 1;
}

message GetNodePodsResponse {
  repeated Pod pods = 1;
}

message Pod {
  string pod_name = 1;
  string namespace = 2;
  model.Resources requested = 3;
  string capsule_name = 4;
}
